Updated to Java11
Signed-off-by: MaloW <lowegrenmarcus@gmail.com>